<resources>
    <string name="app_name">ZenMind</string>
    <string name="tab_home">Home</string>
    <string name="tab_library">Library</string>
    <string name="tab_journal">Journal</string>
    <string name="tab_history">History</string>
    <string name="start_meditation">Start Meditation</string>
    <string name="quick_journal">Quick Journal</string>
    <string name="daily_quote_label">Daily Quote</string>

    <string name="signin_title">Welcome back</string>
    <string name="signup_title">Create your account</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="name_label">Name</string>
    <string name="signin_btn">Sign In</string>
    <string name="signup_btn">Sign Up</string>
    <string name="have_account">Already have an account? Sign In</string>
    <string name="no_account">Don’t have an account? Sign Up</string>
    <string name="or">OR</string>

</resources>
